# optimizing-similarity-algorithms

./: .gitignore  README.md  scratch.rs
content/: diagram.drawio
expensive-similarity/: Cargo.toml
expensive-similarity/src/: aligned.rs  flatten.rs  main.rs  metric.rs
