[package]
name = "expensive-similarity"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.5.4"
rand = "0.8.5"

# optimization level 3
[profile.release]
opt-level = 3

# optimization level 3
[profile.dev]
opt-level = 3
